# cutting-solver

./: CMakeLists.txt  LICENSE  README.md
data/: external_shape_01.txt
src/: main.cpp
